--- a/package.json
+++ b/package.json
@@ -1,19 +1,33 @@
 {
-  "name": "jwt-practice",
+  "name": "jwt-auth-demo",
   "version": "1.0.0",
-  "description": "Learning-oriented Node.js + Express + MongoDB + JWT app skeleton",
-  "main": "server.js",
+  "description": "Node.js JWT authentication demo with secure-by-default and individual vulnerability flags",
+  "main": "src/app.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
-    "mongoose": "^8.3.0"
+    "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "mongoose": "^7.8.7",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
-  }
+    "nodemon": "^2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/aaroncjames/jwt_lab.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "commonjs",
+  "bugs": {
+    "url": "https://github.com/aaroncjames/jwt_lab/issues"
+  },
+  "homepage": "https://github.com/aaroncjames/jwt_lab#readme"
 }
