--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
+    "node-fetch": "^3.3.2",
     "yargs": "^17.7.2"
   },
   "devDependencies": {
