added docker stuff and updated readme

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
-PORT=5000
-MONGO_URI=mongodb://127.0.0.1:27017/jwt_practice
-JWT_SECRET=supersecretkey
+PORT=4443
+
+# Local Mongo
+MONGODB_URI=mongodb://127.0.0.1:27017/jwt-auth-demo
+
+# JWT secrets
+JWT_SECRET=change_me_min_32_chars
+JWT_SECRET_WEAK=weaksecret
+
+# Debug
+DEBUG_JWT=false
+
+# For Docker, use:
+# MONGODB_URI=mongodb://mongo:27017/jwt-auth-demo
+
